# serious-python

./: .appveyor.yml  .fvmrc  .gitignore  .metadata  CHANGELOG.md  CONTRIBUTING.md  README.md  appveyor.yml  patch_pubspec.py  pubspec.yaml  python_ffigen.yaml
src/: CMakeLists.txt
src/serious_python/: CHANGELOG.md  README.md  pubspec.yaml
src/serious_python/example/: .gitignore  README.md
src/serious_python/example/bridge_example/: .gitignore  .metadata  README.md  pubspec.yaml
src/serious_python/example/bridge_example/lib/: main.dart
src/serious_python/example/flask_example/: .gitignore  README.md  pubspec.yaml
src/serious_python/example/flet_example/: .metadata  README.md  pubspec.yaml
src/serious_python/example/flet_ffi_example/: README.md  pubspec.yaml
src/serious_python/example/run_example/: README.md  a.txt  pubspec.yaml
src/serious_python/example/searxng_example/: .gitignore  README.md  pubspec.yaml
src/serious_python/lib/: bridge.dart  cpython.dart  serious_python.dart
src/serious_python/lib/src/: io_impl.dart  io_stub.dart  python_bridge.dart  python_versions.dart
src/serious_python/serious_python/: CHANGELOG.md
src/serious_python/serious_python/example/: README.md
src/serious_python/serious_python_android/: CHANGELOG.md  README.md
src/serious_python/serious_python_android/android/: .gitignore
src/serious_python/serious_python_ios/: pubspec.yaml
src/serious_python/serious_python_ios/ios/: serious_python_ios.podspec
src/serious_python/serious_python_platform_interface/: .flutter-plugins-dependencies  analysis_options.yaml  pubspec.yaml
src/serious_python/serious_python_platform_interface/lib/: serious_python_platform_interface.dart
src/serious_python/test/: glob_test.dart
src/serious_python_android/: CHANGELOG.md  analysis_options.yaml  pubspec.yaml  python_ffigen.yaml
src/serious_python_android/android/: .gitignore  build.gradle  build.gradle.kts  bundle.sh  consumer-rules.pro  python_versions.properties  settings.gradle
src/serious_python_android/lib/: serious_python_android.dart
src/serious_python_android/lib/src/: cpython.dart  gen.dart  log.dart
src/serious_python_android/python/: _sp_bootstrap.py
src/serious_python_android/src/: CMakeLists.txt  serious_python.c
src/serious_python_bridge/: CHANGELOG.md  README.md  pubspec.yaml
src/serious_python_bridge/android/: CMakeLists.txt  build.gradle
src/serious_python_bridge/darwin/: serious_python_bridge.podspec
src/serious_python_bridge/darwin/Classes/: SeriousPythonBridgePlugin.h  SeriousPythonBridgePlugin.swift  dart_bridge.c  dart_bridge_shim.c
src/serious_python_bridge/example/: .gitignore  README.md  pubspec.yaml
src/serious_python_bridge/example/integration_test/: .gitkeep  bridge_echo_test.dart
src/serious_python_bridge/example/lib/: main.dart
src/serious_python_bridge/lib/: serious_python_bridge.dart
src/serious_python_bridge/linux/: CMakeLists.txt
src/serious_python_bridge/native/: CMakeLists.txt  dart_bridge.c  dart_bridge_shim.c
src/serious_python_bridge/python/: MANIFEST.in  pyproject.toml  setup.cfg  setup.py
src/serious_python_bridge/windows/: CMakeLists.txt
src/serious_python_darwin/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
src/serious_python_darwin/darwin/: .gitignore  bundle-addon.sh  bundle-python-frameworks-ios.sh  bundle-python-frameworks.sh  pods-runner-frameworks-addon.sh  prepare_ios.sh  prepare_macos.sh  prepare_spm.sh  python_versions.properties  serious_python_darwin.podspec  stage_spm.sh  symlink_pod.sh  sync_darwin.sh  sync_ios.sh  sync_site_packages.sh  xcframework_utils.sh
src/serious_python_darwin/darwin/Classes/: SeriousPythonPlugin.swift
src/serious_python_darwin/darwin/serious_python_darwin/: Package.swift
src/serious_python_darwin/lib/: serious_python_darwin.dart
src/serious_python_ios/: pubspec.yaml
src/serious_python_ios/ios/: serious_python_ios.podspec
src/serious_python_ios/lib/: serious_python_ios.dart
src/serious_python_linux/: .metadata  CHANGELOG.md  README.md  pubspec.yaml
src/serious_python_linux/example/: pubspec.yaml
src/serious_python_linux/example/lib/: main.dart
src/serious_python_linux/example/linux/: CMakeLists.txt  my_application.cc
src/serious_python_linux/lib/: serious_python_linux.dart
src/serious_python_linux/linux/: CMakeLists.txt  python_versions.properties  serious_python_linux_plugin.cc  serious_python_linux_plugin_private.h
src/serious_python_linux/linux/test/: serious_python_linux_plugin_test.cc
src/serious_python_macos/: .metadata  CHANGELOG.md  README.md  pubspec.yaml
src/serious_python_macos/lib/: serious_python_macos.dart
src/serious_python_macos/macos/: serious_python_macos.podspec
src/serious_python_macos/macos/Classes/: SeriousPythonMacosPlugin.swift
src/serious_python_platform_interface/: .flutter-plugins  .flutter-plugins-dependencies  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml  python_ffigen.yaml
src/serious_python_platform_interface/lib/: serious_python_platform_interface.dart
src/serious_python_platform_interface/lib/src/: cpython.dart  dart_bridge_ffi.dart  gen.dart  method_channel_serious_python.dart  utils.dart  utils_interface.dart  utils_io.dart  utils_web.dart
src/serious_python_web/: pubspec.yaml
src/serious_python_web/lib/: pyodide_constants.dart  pyodide_interop.dart  pyodide_state.dart  pyodide_utils.dart  serious_python_web.dart
src/serious_python_windows/: .metadata  CHANGELOG.md  README.md  pubspec.yaml
src/serious_python_windows/example/: README.md  pubspec.yaml
src/serious_python_windows/example/integration_test/: plugin_integration_test.dart
src/serious_python_windows/example/lib/: main.dart
src/serious_python_windows/example/test/: widget_test.dart
src/serious_python_windows/example/windows/: CMakeLists.txt
src/serious_python_windows/lib/: serious_python_windows.dart
src/serious_python_windows/windows/: CMakeLists.txt  python_versions.properties  rm_globs.cmake  serious_python_windows_plugin.cpp  serious_python_windows_plugin.h  serious_python_windows_plugin_c_api.cpp
(+254 files in other folders)
