[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dart_bridge"
version = "0.0.0"
description = "Python C extension exposing the dart_bridge module — bidirectional Dart ↔ Python byte transport for serious_python_bridge."
authors = [
    { name = "Flet Team", email = "hello@flet.dev" },
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["dart", "ffi", "bridge", "serious_python", "flet"]

[project.urls]
Homepage = "https://github.com/flet-dev/serious-python"
Issues = "https://github.com/flet-dev/serious-python/issues"

[tool.cibuildwheel]
build = "cp312-* cp313-* cp314-*"
skip = ["pp*", "*-musllinux_*"]
