[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dart_bridge"
version = "0.0.0"
description = "Python C extension exposing the dart_bridge module — bidirectional Dart ↔ Python byte transport for serious_python_bridge."
authors = [
    { name = "Flet Team", email = "hello@flet.dev" },
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["dart", "ffi", "bridge", "serious_python", "flet"]

[project.urls]
Homepage = "https://github.com/flet-dev/serious-python"
Issues = "https://github.com/flet-dev/serious-python/issues"

[tool.cibuildwheel]
# Limited API / abi3: a single wheel built against Python 3.12's stable ABI
# loads on any Python 3.12+ minor version, so we only need cp312-* here.
build = "cp312-*"
# Flet targets only 64-bit desktop, so skip 32-bit (i686 / win32). Also skip
# PyPy and musllinux (alternative libc, not what python-build-standalone uses).
skip = ["pp*", "*-musllinux_*", "*_i686", "*-win32"]
